--- a/go-web-tucker/myapp/myupload/public/index.html
+++ b/go-web-tucker/myapp/myupload/public/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 <p>File Transfer</p>
-<form action="/uploads" method="post" accept-charset="utf-8" enctype="multipart/form-data">
+<form action="/myapp/uploads" method="post" accept-charset="utf-8" enctype="multipart/form-data">
     <input type="file" id="upload_file" name="upload_file"/>
     <input type="submit" name="upload">
 </form>
